--- a/web/styles.css
+++ b/web/styles.css
@@ -74,7 +74,8 @@ canvas {
 
 button {
   border: none;
-  color: var(--color-a);
+  color: var(--color-d);
+  font-size: 32px;
   text-align: center;
   padding: 10px;
   background-color: transparent;
@@ -83,6 +84,11 @@ button {
   flex: 1;
   font-weight: bold;
   letter-spacing: 1px;
+  max-height: 72px;
+}
+
+#actions {
+  display: flex;
 }
 
 button:active {
