--- a/web/styles.css
+++ b/web/styles.css
@@ -175,9 +175,10 @@ button:active {
 #controls {
   display: grid;
   grid-template-areas:
-    'filters freqs'
-    'actions tracks';
+    'filters tracks'
+    'actions freqs';
   grid-template-columns: 200px auto;
+  max-height: 128px;
   gap: var(--gap);
   transition: opacity var(--speed) ease-in-out;
 }
@@ -201,6 +202,10 @@ button:active {
   display: flex;
   justify-self: stretch;
 }
+#freqs canvas {
+ background-image: none;
+ flex: 1;
+}
 
 #tracks {
   grid-area: tracks;
@@ -212,6 +217,10 @@ button:active {
   color: white;
   max-width: none;
   max-height: none;
+}
+#tracks button.toggle {
+  color: white;
+  background-color: var(--red);
 }
 
 #console {
